feat: criar o chat em tempo real
